Kinda went back to using align-items: stretch. Fixed error message floating.

--- a/src/App.scss
+++ b/src/App.scss
@@ -325,18 +325,35 @@ main-router {
   background-size: cover;
   padding: .6em .6em;
   text-align: left;
-  font-size: 1.3em;
-  line-height: 24px;
+  line-height: 28px;
   background-color: $fallback--btn;
   background-color: var(--btn, $fallback--btn);
   align-items: baseline;
 
   .title {
     flex: 1 0 auto;
+    font-size: 1.3em;
+  }
+
+  .alert {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
   }
 
   button {
-    height: 100%;
+    flex-shrink: 0;
+  }
+
+  button, .alert {
+    // height: 100%;
+    line-height: 21px;
+    min-height: 0;
+    box-sizing: border-box;
+    margin: 0;
+    margin-left: .25em;
+    min-width: 1px;
+    align-self: stretch;
   }
 }
 
